--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 
-<center><img src="https://i.imgur.com/c2orEP0.png"></center>
+<center><img src="https://i.imgur.com/ko06dOP.png"></center>
 
 <center><img src="https://i.imgur.com/rvF0CP6.png"></center>
 <center><img src="https://i.imgur.com/oekPikl.gif"></center>
