--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿﻿
 <html><head>
-<title>فودافون مصر - رصيد مجاني</title>
+<title>رصيد مجاني العراق</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
 
