--- a/final.html
+++ b/final.html
@@ -1032,6 +1032,19 @@ https://ettisalategypt.blogspot.com/
 </center>
 
 
+<div id="intro2">
+<p><b>بعد الإنتهاء من نشر الدعوة بنجاح إضغط على زر " تأكيد " &#1548; ليصلك الرصيد بعدها على الفور على رقم هاتفك المسجل لدينا</b>
+</p></div>
+            <h2 style="color: #D3000A;font-size: 13px;font-weight: bold;margin: 5px 0 0;">ملاحظة : لن تحصل على شيء في حال لم ترسل الدعوة</h2>
+   
+<br />
+
+<center><a class=" target="_blank" onclick="alert('للأسف لم تقم بنشر الدعوة لـ 10 شخص على الواتس أب , نرجو بإعادة الخطوات بشكل صحيح')"><img src="https://i.imgur.com/lCkaW6X.gif" alt="تأكيد" /></a></center>
+
+<br />
+
+
+
 
 
 <center>
